Added image upload, comments and deletion features

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -28,11 +28,18 @@
         {{{ body }}}
       </div>
       <div class="col-md-4">
-
+        {{> stats }}
+        {{> popular }}
+        {{> comments }}
       </div>
     </div>
   </div>
 
+  <script
+  src="https://code.jquery.com/jquery-3.3.1.js"
+  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+  crossorigin="anonymous"></script>
+  <script src="/public/js/scripts.js"></script>
   
 </body>
 </html>
