--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -5,7 +5,7 @@
     </h3>
   </div>
   <div class="card-body">
-    <form action="/images" method="POST">
+    <form action="/images" method="POST" enctype="multipart/form-data">
       <div class="form-group">
         <div class="input-group">
           <div class="custom-file">
@@ -26,5 +26,20 @@
         </button>
       </div>
     </form>
+  </div>
+</div>
+
+<div class="card mt-2">
+  <div class="card-header bg-dark text-white">
+    <h3><i class="far fa-images"></i> Recent uploads</h3>
+  </div>
+  <div class="card-body">
+    <div class="row">
+      {{#each images }}
+        <div class="col-md-3 mb-2">
+          <a href="/images/{{ uniqueId }}"><img class="w-100 h-100 img-thumbnail" src="/public/upload/{{ filename }}" alt="{{title}}"></a>
+        </div>
+      {{/each }}
+    </div>
   </div>
 </div>
